# zephyr_lib

./: .clang-format  CMakeLists.txt  Kconfig  README.md
ble_common/: CMakeLists.txt  Kconfig  Kconfig.lcz_bt_scan  Kconfig.lcz_bt_security
ble_common/include/: ad_find.h  bt510_flags.h  bt_scan.h  laird_bluetooth.h  lcz_bluetooth.h  lcz_bt_scan.h  lcz_bt_security.h  lcz_sensor_adv_enc.h  lcz_sensor_adv_format.h  lcz_sensor_adv_match.h  lcz_sensor_event.h
ble_common/source/: ad_find.c  bt_scan.c  laird_bluetooth.c  lcz_bluetooth.c  lcz_bt_scan.c  lcz_bt_security.c  (+4 more)
ble_services/: CMakeLists.txt  Kconfig
cmake/: git_version.cmake
components/: CMakeLists.txt  Kconfig  Kconfig.dummy_smp  Kconfig.lcz_approtect  Kconfig.lcz_bracket  Kconfig.lcz_event_manager  Kconfig.lcz_led  Kconfig.lcz_nfc  Kconfig.lcz_no_init_ram_var  Kconfig.lcz_param_file  Kconfig.lcz_params  Kconfig.lcz_power  Kconfig.lcz_pwm_led  Kconfig.lcz_qrtc  Kconfig.lcz_ramdisk  Kconfig.lcz_rpmsg  Kconfig.lcz_settings  Kconfig.lcz_shell_log  Kconfig.lcz_watchdog
drivers/: CMakeLists.txt  CMakelists.txt  Kconfig
include/: accelerometer.h
lcz_kvp/: CMakeLists.txt  Kconfig  README.md
mcuboot_config/: bl5340.conf  disable-signature-check.conf  disable-slot0-validate.conf  mcuboot-internal.conf  mcuboot-qspi.conf  mcuboot-serial-pinnacle100_dvk.conf  overlay-disable-hl7800-modem.conf  pinnacle_100.conf  pm.pinnacle100.yml  pm_static.bl5340_dvk_cpuapp.yml  pm_static.mg100.yml  pm_static.pinnacle100.yml  pm_static.sb.bl5340_dvk_cpuapp.yml  pm_static.sb.bt6.yml  pm_static.sb.mg100.yml  pm_static.sb.mg167.yml  pm_static.sb.nrf7002dk_nrf5340_cpuapp.yml  pm_static.sb.pinnacle_100_dvk.yml
mcumgr_cmds/: CMakeLists.txt  Kconfig
mcumgr_os_mgmt/: CMakeLists.txt  Kconfig  pkg.yml  syscfg.yml
mcumgr_wrapper/: CMakeLists.txt  Kconfig
memfault/: CMakeLists.txt  Kconfig
utilities/: CMakeLists.txt  Kconfig  Kconfig.lcz_snprintk
zephyr/: module.yml
(+270 files in other folders)
